  Part of #1124

--Fixed so that removing object contained in worn clothing correctly applies
  bare-hand transition (pick up transition), and inserting held object into
  worn clothing correctly applies use-on-ground transition (put down
  transition).  Part of #1124

--Fixed Unix pull-and-build script to link contentSettings.  Thanks 
  InTheMorning.  Fixes #1163 Fixes #1164




Version 430    2025-January-13

--Button on AHAP Voting Page now says VOTE (used to say POST).  Part of #1107

--Fixed client to parse arbitrary number of underscore-delimited curse words in
  a CU message, instead of just two.  Old client will display the extra
  underscores in the spoken curse words, which looks ugly, but still works for
  now until next client build is pushed out.  Part of #1119

--Fixed mod exporter code to avoid duplicating author=author= in .txt files
  for sound files included in export.  Part of #1114

--copyChangesToRepo.bat utility script now copies txt files from sounds
  folder.  Part of #1114

--Support for settings/wordBlacklist.ini file. which lets you list words you no
  longer want to see in other players' speech.  These words will be replaced
  with XXXX when spoken by anyone.

--Fixed a memory leak in minorGems/util/SettingsManager.cpp

--Support for /BLACKLIST WORD1 WORD2 WORD3 chat slash command, to add words
  to your personal blacklist.

--Fixed a memory leak if you die with the typing-speech notepad open.

--Fixed so that if you type a really long word with no spaces in the
  typing-speech notepad, it doesn't overflow the notepad line (the long word is
  broken up to fit).  This also fixes very long words in speech bubbles (which
  used to make very long speech bubbles that would go off screen).

--Word blacklist now applies to DING message too (but not tutorial messages).

--No longer have a short limit on /COMMAND slash command length (was 23, now
  200) so that a long list of /BLACKLIST words can by added in one go.
